@@ -1,40 +1,36 @@
 # Space-bar previews
 
-SlayDown 0.3.0 adds Markdown adapters for **Sushi on Linux** and **QuickLook on Windows**. macOS continues to use the bundled Quick Look extension. These are community integrations, not official Omarchy or Microsoft plugins.
+SlayDown 0.3.1 includes Markdown adapters for **Sushi on Linux** and **QuickLook on Windows**. macOS continues to use the bundled Quick Look extension. These are community integrations, not official Omarchy or Microsoft plugins.
 
 The Linux and Windows adapters use SlayDown's installed renderer, bundled fonts, and `appearance.json` settings. They do not start the full reader or replace its open document. Open SlayDown once after upgrading to migrate any older appearance preferences before using the new preview.
 
 ## Omarchy / Linux (Nautilus + Sushi)
 
-1. Install SlayDown 0.3.0 or later. **Sushi is a separate prerequisite and may be missing on an existing Omarchy installation.** On Omarchy run `sudo pacman -S --needed sushi gjs python desktop-file-utils`. Use Nautilus (Files) for Space-bar previews. The GTK3 adapter requires Sushi 46–50 and WebKitGTK 4.1; Sushi 51+ uses WebKitGTK 6.0 (`webkitgtk-6.0` on Arch). Install the matching WebKit package if needed. On Debian/Ubuntu the Sushi package is named `gnome-sushi`.
-2. Download and extract `SlayDown-Sushi.tar.gz` from the same release.
-3. Run `bash SlayDown-Sushi/install.sh`. For an AppImage, pass its absolute path: `bash SlayDown-Sushi/install.sh "$HOME/Applications/SlayDown_0.3.0_amd64.AppImage"`. Keep that file at the same location; rerun the installer if it moves.
-4. Log out and back in to restart Sushi. In **Files**, select a local `.md`, `.markdown`, `.mdown`, or `.mkd` file and press **Space**. Press Space or Escape to close. Other file types continue using their existing Sushi previews.
+1. Quit any running Folio/SlayDown, then install **SlayDown 0.3.1 or later** and open it once. Both the native package and AppImage include the adapter; a separate adapter download is no longer required.
+2. **Sushi is a separate system prerequisite.** On Omarchy run `sudo pacman -S --needed sushi gjs`. On Debian/Ubuntu install `gnome-sushi` and `gjs`. SlayDown’s **Appearance → Linux integration** shows missing dependencies and the matching WebKit package command. Choose **Check again** after installing them.
+3. SlayDown registers its current executable and icon, migrates a Folio Markdown default even if the old binary was deleted, and installs/updates the adapter for your Sushi version. It preserves defaults pointing to other editors. Choose **Use SlayDown for Markdown** if you want to change those explicitly.
+4. Log out and back in after the first adapter installation or a Sushi major upgrade to restart the preview host. In **Files (Nautilus)**, select a local Markdown file and press **Space**. Other file types keep their existing previews.
 
-Choose **Appearance** in the preview to change style, theme, tint, or size. On a fresh Omarchy install the default is **Omarchy**, with its bundled heading font, system theme, and neutral tint. Existing choices are preserved. Changes appear in another open preview or full reader within two seconds, and persist across restarts. Preview content is a snapshot; close/reopen after editing. The full reader retains its automatic file refresh.
+On each subsequent app launch, SlayDown refreshes changed launcher/adapter files only. An AppImage launcher uses the permanent `APPIMAGE` path, never its temporary mount directory. After moving or replacing the AppImage, open the new file once. Preview mode itself never runs installation or changes defaults.
 
-By default, the installer writes only `~/.local/share/sushi/viewers/slaydown.js` (Sushi 46–50) or `~/.local/share/sushi/plugins-1/slaydown.js` (51+), respecting `XDG_DATA_HOME`. No root access, global keyboard hook, or replacement D-Bus service is needed. Remove the adapter with `bash SlayDown-Sushi/install.sh --uninstall`, then log out/back in.
+The integration writes per-user files under `XDG_DATA_HOME` (normally `~/.local/share`): `applications/SlayDown.desktop`, `slaydown/icon.png`, `slaydown/integration.json`, and the matching `sushi/viewers/slaydown.js` (Sushi 46–50) or `sushi/plugins-1/slaydown.js` (51+). GIO manages the Markdown MIME defaults. Old app binaries are not deleted. Disable **Space-bar preview in Files** to remove the adapter; that choice persists across upgrades and launches. No privileged background installer or global keyboard hook is used.
+
+Choose **Appearance** in the preview to change style, theme, tint, or size. Fresh Omarchy installs default to **Omarchy**, with its bundled heading font, system theme, and neutral tint. Existing choices are preserved and synchronize between the preview and reader. Preview content is a snapshot; close/reopen after editing. The full reader refreshes automatically.
 
 ### If Sushi says “Open With Folio”
 
-Sushi's native top button uses your **default application for Markdown**. Deleting an old AppImage does not clear its desktop launcher or that association. The separate **Open in SlayDown** button inside the preview launches the executable configured by the adapter.
+That button uses the Linux default Markdown application. **Upgrade to 0.3.1, quit the old app, and launch the new one once.** SlayDown migrates the old default automatically. Log out/back in to clear any cached Folio process or application label. You do not need a separate repair command.
 
-Close any running Folio instance. Download [repair-desktop.py](https://raw.githubusercontent.com/woodcreeper/slaydown/main/preview/linux/repair-desktop.py) and run it **on the Linux machine**, without sudo:
+For older 0.3.0 installations only, the [legacy repair helper](https://raw.githubusercontent.com/woodcreeper/slaydown/v0.3.1/preview/linux/repair-desktop.py) remains available. It is a compatibility tool, not the normal install/upgrade path.
 
-```bash
-python3 ~/Downloads/repair-desktop.py
-```
-
-It finds the executable used by your installed Sushi adapter, verifies it, registers a per-user **SlayDown** launcher, and sets only `text/markdown` and `text/x-markdown` to open there. It also ensures the selected filename is passed to the app. If it cannot find the executable, pass its absolute path as the next argument. Log out/back in after repair so Files and Sushi discard their old application state. No app binaries or appearance preferences are removed, and plain-text/editor associations are preserved.
-
-For source-built adapter bundles containing this helper, use `bash SlayDown-Sushi/install.sh --set-default /absolute/path/to/SlayDown.AppImage` to install the preview and register the default together. This option writes `~/.local/share/applications/SlayDown.desktop` and updates the user's Markdown MIME defaults; any existing per-user SlayDown launcher is backed up once beside it. Adapter `--uninstall` leaves this launcher/default in place. The original v0.3.0 adapter archive predates the repair helper; use the separate download above with that release. Rerun the helper with the new executable path if you move or replace an AppImage.
+For scripted deployments, `slaydown --linux-integrate` runs the same lifecycle as the app and reports JSON status. Optional `--set-default`, `--enable-preview`, and `--disable-preview` correspond to Settings controls. A missing Sushi prerequisite is reported with `previewReady: false` and an installation hint; installing system packages still requires the normal package manager. The separate adapter archive’s installer delegates to this lifecycle on 0.3.1+, retaining its legacy implementation only for 0.3.0.
 
 ### If Space still shows plain text
 
-- Check `pacman -Q sushi` and rerun the adapter installer after a major Sushi upgrade.
+- Check `pacman -Q sushi` and reopen SlayDown after a major Sushi upgrade.
 - Check `xdg-mime query filetype /absolute/path/notes.md`; it must report `text/markdown` or `text/x-markdown`. Files detected as plain text are handled by Sushi's plain-text viewer.
 - Verify `slaydown --preview-appearance` works (or use the AppImage path). A 0.2.x binary does not have the preview bridge.
-- Restart your login session after installing. Launching the full reader alone does not install the Sushi adapter.
+- Restart your login session after installing. SlayDown 0.3.1 installs the bundled adapter when you launch the reader; check its Linux integration status.
 - An AppImage also needs the normal FUSE/AppImage prerequisites. The native Arch package avoids that dependency.
 
 ## Windows (File Explorer + QuickLook)
